// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots RadioGroup Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              RadioGroup
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="RadioGroup__StyledRadioGroup-cefqbb efDhcp"
            data-test={undefined}
          >
            <span
              className="RadioGroup__Label-biwCyM fBqrQl FormLabel-kJFBRQ fuYBgg"
              data-test={undefined}
            >
              <span>
                Label
              </span>
            </span>
            <div
              className="RadioGroup__StyledRadioGroupChild-dzrhqa ekwPmH"
            >
              <label
                checked={false}
                className="Radio__Label-bpjkjl iJHPXt"
                data-test={undefined}
              >
                <input
                  checked={false}
                  className="Radio__Input-fvWuwA ftXShs"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="first"
                />
                <div
                  className="Radio__IconContainer-fQtsRf iUWTcU"
                >
                  <span
                    className="Radio__Glyph-kyhivX cwaJth"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-gTKRvD buEioY"
                >
                  <span
                    className="Radio__LabelText-hQDDIn hdeiSK"
                  >
                    Choice
                  </span>
                </div>
              </label>
            </div>
            <div
              className="RadioGroup__StyledRadioGroupChild-dzrhqa ekwPmH"
            >
              <label
                checked={false}
                className="Radio__Label-bpjkjl iJHPXt"
                data-test={undefined}
              >
                <input
                  checked={false}
                  className="Radio__Input-fvWuwA ftXShs"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="second"
                />
                <div
                  className="Radio__IconContainer-fQtsRf iUWTcU"
                >
                  <span
                    className="Radio__Glyph-kyhivX cwaJth"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-gTKRvD buEioY"
                >
                  <span
                    className="Radio__LabelText-hQDDIn hdeiSK"
                  >
                    Choice
                  </span>
                </div>
              </label>
            </div>
            <div
              className="RadioGroup__StyledRadioGroupChild-dzrhqa ekwPmH"
            >
              <label
                checked={false}
                className="Radio__Label-bpjkjl iJHPXt"
                data-test={undefined}
              >
                <input
                  checked={false}
                  className="Radio__Input-fvWuwA ftXShs"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="third"
                />
                <div
                  className="Radio__IconContainer-fQtsRf iUWTcU"
                >
                  <span
                    className="Radio__Glyph-kyhivX cwaJth"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-gTKRvD buEioY"
                >
                  <span
                    className="Radio__LabelText-hQDDIn hdeiSK"
                  >
                    Choice
                  </span>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        RadioGroup
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Label
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  onChange()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Choice
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                first
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Choice
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                second
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Choice
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                third
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        RadioGroup
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots RadioGroup Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Playground of RadioGroup
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="RadioGroup__StyledRadioGroup-cefqbb efDhcp"
            data-test="test"
          >
            <span
              className="RadioGroup__Label-biwCyM fBqrQl FormLabel-kJFBRQ irIxpQ"
              data-test={undefined}
            >
              <span>
                Label
              </span>
            </span>
            <div
              className="RadioGroup__StyledRadioGroupChild-dzrhqa cPXBbI"
            >
              <label
                checked={true}
                className="Radio__Label-bpjkjl iJHPXt"
                data-test={undefined}
              >
                <input
                  checked={true}
                  className="Radio__Input-fvWuwA ftXShs"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="first"
                />
                <div
                  className="Radio__IconContainer-fQtsRf iUWTcU"
                >
                  <span
                    className="Radio__Glyph-kyhivX cwaJth"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-gTKRvD buEioY"
                >
                  <span
                    className="Radio__LabelText-hQDDIn hdeiSK"
                  >
                    Choice
                  </span>
                  <span
                    className="Radio__Info-bzaVHk CCylZ"
                  >
                    Additional information for this choice
                  </span>
                </div>
              </label>
            </div>
            <div
              className="RadioGroup__StyledRadioGroupChild-dzrhqa cPXBbI"
            >
              <label
                checked={false}
                className="Radio__Label-bpjkjl iJHPXt"
                data-test={undefined}
              >
                <input
                  checked={false}
                  className="Radio__Input-fvWuwA ftXShs"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="second"
                />
                <div
                  className="Radio__IconContainer-fQtsRf iUWTcU"
                >
                  <span
                    className="Radio__Glyph-kyhivX cwaJth"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-gTKRvD buEioY"
                >
                  <span
                    className="Radio__LabelText-hQDDIn hdeiSK"
                  >
                    Choice
                  </span>
                  <span
                    className="Radio__Info-bzaVHk CCylZ"
                  >
                    Additional information for this choice
                  </span>
                </div>
              </label>
            </div>
            <div
              className="RadioGroup__StyledRadioGroupChild-dzrhqa cPXBbI"
            >
              <label
                checked={false}
                className="Radio__Label-bpjkjl iJHPXt"
                data-test={undefined}
              >
                <input
                  checked={false}
                  className="Radio__Input-fvWuwA ftXShs"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="third"
                />
                <div
                  className="Radio__IconContainer-fQtsRf iUWTcU"
                >
                  <span
                    className="Radio__Glyph-kyhivX cwaJth"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-gTKRvD buEioY"
                >
                  <span
                    className="Radio__LabelText-hQDDIn hdeiSK"
                  >
                    Choice
                  </span>
                  <span
                    className="Radio__Info-bzaVHk CCylZ"
                  >
                    Additional information for this choice
                  </span>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        RadioGroup
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Label
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            defaultValue
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                first
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            disabled
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            hasError
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            dataTest
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                test
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  onChange()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Choice
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                first
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            info
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Additional information for this choice
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Choice
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                second
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            info
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Additional information for this choice
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Choice
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                third
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            info
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Additional information for this choice
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        RadioGroup
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots RadioGroup With defaultValue 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With defaultValue
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              RadioGroup
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="RadioGroup__StyledRadioGroup-cefqbb efDhcp"
            data-test={undefined}
          >
            <span
              className="RadioGroup__Label-biwCyM fBqrQl FormLabel-kJFBRQ irIxpQ"
              data-test={undefined}
            >
              <span>
                Label
              </span>
            </span>
            <div
              className="RadioGroup__StyledRadioGroupChild-dzrhqa cPXBbI"
            >
              <label
                checked={true}
                className="Radio__Label-bpjkjl iJHPXt"
                data-test={undefined}
              >
                <input
                  checked={true}
                  className="Radio__Input-fvWuwA ftXShs"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="first"
                />
                <div
                  className="Radio__IconContainer-fQtsRf iUWTcU"
                >
                  <span
                    className="Radio__Glyph-kyhivX cwaJth"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-gTKRvD buEioY"
                >
                  <span
                    className="Radio__LabelText-hQDDIn hdeiSK"
                  >
                    Choice
                  </span>
                  <span
                    className="Radio__Info-bzaVHk CCylZ"
                  >
                    Additional information for this choice
                  </span>
                </div>
              </label>
            </div>
            <div
              className="RadioGroup__StyledRadioGroupChild-dzrhqa cPXBbI"
            >
              <label
                checked={false}
                className="Radio__Label-bpjkjl iJHPXt"
                data-test={undefined}
              >
                <input
                  checked={false}
                  className="Radio__Input-fvWuwA ftXShs"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="second"
                />
                <div
                  className="Radio__IconContainer-fQtsRf iUWTcU"
                >
                  <span
                    className="Radio__Glyph-kyhivX cwaJth"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-gTKRvD buEioY"
                >
                  <span
                    className="Radio__LabelText-hQDDIn hdeiSK"
                  >
                    Choice
                  </span>
                  <span
                    className="Radio__Info-bzaVHk CCylZ"
                  >
                    Additional information for this choice
                  </span>
                </div>
              </label>
            </div>
            <div
              className="RadioGroup__StyledRadioGroupChild-dzrhqa cPXBbI"
            >
              <label
                checked={false}
                className="Radio__Label-bpjkjl iJHPXt"
                data-test={undefined}
              >
                <input
                  checked={false}
                  className="Radio__Input-fvWuwA ftXShs"
                  disabled={false}
                  onChange={[Function]}
                  type="radio"
                  value="third"
                />
                <div
                  className="Radio__IconContainer-fQtsRf iUWTcU"
                >
                  <span
                    className="Radio__Glyph-kyhivX cwaJth"
                    disabled={false}
                  />
                </div>
                <div
                  className="Radio__TextContainer-gTKRvD buEioY"
                >
                  <span
                    className="Radio__LabelText-hQDDIn hdeiSK"
                  >
                    Choice
                  </span>
                  <span
                    className="Radio__Info-bzaVHk CCylZ"
                  >
                    Additional information for this choice
                  </span>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        RadioGroup
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Label
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            defaultValue
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                first
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  onChange()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Choice
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                first
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            info
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Additional information for this choice
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Choice
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                second
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            info
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Additional information for this choice
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Radio
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Choice
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                third
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            info
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Additional information for this choice
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        RadioGroup
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
